--- a/SvgToWpf.Tests/SvgToWpf.Tests.csproj
+++ b/SvgToWpf.Tests/SvgToWpf.Tests.csproj
@@ -127,6 +127,9 @@
     <Content Include="Files\random.svg">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </Content>
+    <Content Include="Files\random_text.svg">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </Content>
     <Content Include="Files\rectangle.svg">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </Content>
